[package]
name = "line-server-exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4"
env_logger = "0.10.1"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
futures = "0.3.29"
